--- a/lib/petal_experiment_web/components/layouts/root.html.heex
+++ b/lib/petal_experiment_web/components/layouts/root.html.heex
@@ -10,6 +10,10 @@
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
+    <script defer src="https://unpkg.com/@alpinejs/collapse@3.x.x/dist/cdn.min.js">
+    </script>
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js">
+    </script>
   </head>
   <body class="bg-white antialiased">
     <%= @inner_content %>
